# stats-transformer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.agents/: git-management-pypi.md
.agents/workflows/: branch-agent.md  commit-agent.md  github-agent.md  pypi-publisher.md
.github/workflows/: ci.yml  publish.yml
.kilo/plans/: archive-deprecated-docs.md
docs/: academic_examples_using_stats-transformer.md  architecture.md  cookie_cutter_refactor.md  documentation.md  file_structure.md  refactoring_progress.md
docs/archive/: agentic_examples.md
docs/planned_extensions/: README.md  econometric_models.md  econometric_models_existing_repos.md  misc.md
docs/validation/: testing_suite.md
notebooks/: 0-overall-pipeline.ipynb  01_regression_examples.ipynb  02_timeseries_examples.ipynb  03_classification_and_unsupervised.ipynb  04_applied_examples.ipynb  05_more_applied_examples.ipynb  06_visualization.ipynb  07_chart_components.ipynb  1-featurization.ipynb  academic_examples.ipynb
references/configs/: test_pipeline.yaml
references/model_settings_yaml/: longley.yaml  nakamura_steinsson_pca.yaml
scripts/: install-agent-skill.sh
src/examples/: base.py  examples_running_from_yaml.py
src/stats_transformer/: __init__.py  pipeline.py
tests/: test_charts.py  test_config.py  test_data_loading.py  test_data_merger.py  test_dict_country_converter.py  test_pipeline.py  test_reporting_exporters.py  test_timeseries_models.py  test_timeseries_utilities.py  test_unsupervised_models.py  test_visualization.py
tests/data/: test_data.csv
(+151 files in other folders)
